--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <div class="board-main">
                     <div style="background-color: #f44336; margin-left: 15px;">
                         <div class="com-fif">
-                            <div><i class="fa-solid fa-comment"></i></div>
+                            <div><i class="fa-solid fa-comment" style="font-size: 50px;"></i></div>
                             <div style="font-size: 20px;">52</div>
                         </div>
                         <div>Message</div>
